fix imports & clean

--- a/notebooks/other_notebooks/errors.ipynb
+++ b/notebooks/other_notebooks/errors.ipynb
@@ -14,7 +14,7 @@
     "%autoreload 2\n",
     "\n",
     "import sys\n",
-    "sys.path.append('../../src/')"
+    "sys.path.append('../../')"
    ]
   },
   {
@@ -49,7 +49,7 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.ticker as ticker\n",
     "\n",
-    "from matplotlib_param_funcs import set_matplotlib_params,reset_rcParams\n",
+    "from plotting.matplotlib_param_funcs import set_matplotlib_params,reset_rcParams\n",
     "set_matplotlib_params()"
    ]
   },
@@ -60,14 +60,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import miscellaneous_functions as MF\n",
-    "import compute_variables as CV\n",
-    "import compute_errors as CE\n",
-    "import map_functions as mapf\n",
-    "import coordinates\n",
-    "from errorconfig import MonteCarloConfig,BootstrapConfig\n",
-    "import load_sim\n",
-    "import load_data"
+    "import utils.miscellaneous_functions as MF\n",
+    "import src.compute_variables as CV\n",
+    "import src.compute_errors as CE\n",
+    "import plotting.map_functions as mapf\n",
+    "import utils.coordinates as coordinates\n",
+    "from src.errorconfig import MonteCarloConfig,BootstrapConfig\n",
+    "import utils.load_sim as load_sim\n",
+    "import utils.load_data as load_data"
    ]
   },
   {
@@ -77,7 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.rcParams[\"font.size\"] = 20"
+    " plt.rcParams[\"font.size\"] = 20"
    ]
   },
   {
@@ -728,82 +728,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "47",
-   "metadata": {},
-   "source": [
-    "Loading from saved arrays"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "48",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sampling_sizes = np.arange(50,5000+50,50)\n",
-    "map_list = [\"anisotropy\",\"correlation\",\"tilt_abs\"]\n",
-    "\n",
-    "all_errors_dict = {}\n",
-    "for map_string in map_list:\n",
-    "    all_errors_dict[map_string] = {\"young\":[], \"old\":[]}\n",
-    "\n",
-    "for s in sampling_sizes:\n",
-    "    load_path = general_path\n",
-    "    load_path += \"graphs/Observations/Apogee/individual_variable/age/3b6/0R3.5/-2l2/sim/bar_angle_27/4age10/equal_steps/10_bins/\"\n",
-    "    load_path += f\"bootstrap_noReplace_Asymmetric/bootsize_{s}/arrays/\"\n",
-    "    \n",
-    "    map_dict,min_range,max_range,plot_range = load_values_and_plot_ranges(load_path,full_map_string_list)\n",
-    "    \n",
-    "    for map_string in map_list:\n",
-    "        all_errors_dict[map_string][\"young\"].append([map_dict[map_string+\"_error_low\"][0],map_dict[map_string+\"_error_high\"][0]])\n",
-    "        all_errors_dict[map_string][\"old\"].append([map_dict[map_string+\"_error_low\"][-1],map_dict[map_string+\"_error_high\"][-1]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "49",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.rcParams[\"font.size\"] = 15\n",
-    "\n",
-    "fig,axs = plt.subplots(figsize=(15,5),ncols=len(map_list))\n",
-    "\n",
-    "for ax,map_string in zip(axs,map_list):\n",
-    "    ax.plot(sampling_sizes,np.array(all_errors_dict[map_string][\"young\"])[:,0],color=\"blue\",label=\"Young. Below true value\")\n",
-    "    ax.plot(sampling_sizes,np.array(all_errors_dict[map_string][\"young\"])[:,1],color=\"blue\",label=\"Young. Above true value\",linestyle=\"--\")\n",
-    "    ax.plot(sampling_sizes,np.array(all_errors_dict[map_string][\"old\"])[:,0],color=\"red\",label=\"Old. Below true value\")\n",
-    "    ax.plot(sampling_sizes,np.array(all_errors_dict[map_string][\"old\"])[:,1],color=\"red\",label=\"Old. Above true value\",linestyle=\"--\")\n",
-    "    \n",
-    "    ax.axhline(y=0,color=\"grey\",linestyle=\"--\")\n",
-    "    \n",
-    "#     ax.set_xticks(sampling_sizes,labels=[(str(s) if s != 100 else \"\") for s in sampling_sizes])\n",
-    "    ax.xaxis.set_major_locator(ticker.MultipleLocator(200))\n",
-    "    ax.xaxis.set_minor_locator(ticker.MultipleLocator(50))\n",
-    "    \n",
-    "    ax.set_xlabel(\"Random downsampling sample size\")\n",
-    "    ax.set_title(mapf.get_kinematic_titles_dict(vel_x_variable=\"r\",vel_y_variable=\"l\")[map_string.removesuffix(\"_abs\")])\n",
-    "\n",
-    "axs[0].set_ylabel(\"Mean squared deviation from true value\")\n",
-    "axs[0].legend(loc=(0.9,1.15),ncols=2)\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "50",
-   "metadata": {},
-   "source": [
-    "Calculating here"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -825,7 +752,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52",
+   "id": "48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -835,7 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53",
+   "id": "49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -845,7 +772,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54",
+   "id": "50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -855,7 +782,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55",
+   "id": "51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -874,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56",
+   "id": "52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -918,7 +845,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57",
+   "id": "53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -961,7 +888,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58",
+   "id": "54",
    "metadata": {},
    "source": [
     "Symmetric"
@@ -970,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59",
+   "id": "55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -981,7 +908,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60",
+   "id": "56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -994,7 +921,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61",
+   "id": "57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1030,7 +957,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62",
+   "id": "58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1048,7 +975,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63",
+   "id": "59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1059,7 +986,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64",
+   "id": "60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1183,7 +1110,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65",
+   "id": "61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1241,7 +1168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66",
+   "id": "62",
    "metadata": {},
    "source": [
     "Asymmetric"
@@ -1250,7 +1177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67",
+   "id": "63",
    "metadata": {},
    "outputs": [],
    "source": [
