fixes and clean up

--- a/notebooks/other_notebooks/errors.ipynb
+++ b/notebooks/other_notebooks/errors.ipynb
@@ -60,12 +60,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import utils.miscellaneous_functions as MF\n",
     "import src.compute_variables as CV\n",
     "import src.compute_errors as CE\n",
-    "import plotting.map_functions as mapf\n",
-    "import utils.coordinates as coordinates\n",
     "from src.errorconfig import MonteCarloConfig,BootstrapConfig\n",
+    "\n",
+    "import plotting.map_functions as mapf\n",
+    "import plotting.mixed_plots as MP\n",
+    "\n",
+    "import utils.miscellaneous_functions as MF\n",
+    "import utils.coordinates as coordinates\n",
     "import utils.load_sim as load_sim\n",
     "import utils.load_data as load_data"
    ]
@@ -750,13 +753,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "48",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "df = MF.apply_cuts_to_df(df0, cuts_dict=[{\"R\":[0,3.5],\"b\":[3,6],\"l\":[-2,2],\"age\": [9.5,10]}])"
+    "## Value histograms"
    ]
   },
   {
@@ -766,7 +767,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(CV.calculate_correlation(df.vr.values,df.vl.values))"
+    "df = MF.apply_cuts_to_df(df0, cuts_dict=[{\"R\":[0,3.5],\"b\":[3,6],\"l\":[-2,2],\"age\": [4,7]}])\n",
+    "\n",
+    "true_val = CV.calculate_correlation(df.vr.values,df.vl.values)\n",
+    "\n",
+    "print(true_val)"
    ]
   },
   {
@@ -776,26 +781,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(CV.calculate_correlation(df.vr.values,df.vl.values))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "51",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "bins = 50\n",
     "sizes = [50,100,300,1000,5000,10000]\n",
     "\n",
     "fig,ax=plt.subplots()\n",
     "\n",
-    "_,_,vals = get_sampling_errors(df=df,function=CV.calculate_correlation,repeat=500,replacement=False,symmetric=True,sampling_sizes=sizes,verbose=True)\n",
-    "for v in vals:\n",
-    "    ax.hist(v,bins=bins,alpha=0.5)\n",
+    "for s in sizes:\n",
+    "    _,_,vals = get_sampling_errors(df=df,function=CV.calculate_correlation,repeat=500,replacement=False,symmetric=True,sampling_sizes=[s],verbose=True)\n",
+    "\n",
+    "    ax.hist(vals,bins=bins,alpha=0.5,label=s)\n",
+    "    \n",
     "ax.axvline(true_val,color=\"red\")\n",
+    "ax.legend()\n",
+    "ax.set_xlabel(\"Correlation\")\n",
+    "ax.set_ylabel(r\"$N$\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51",
+   "metadata": {},
+   "source": [
+    "## Error vs N"
    ]
   },
   {
@@ -805,41 +813,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sampling_sizes = np.arange(50,5000+50,50)\n",
-    "function_dict = {\n",
-    "    \"anisotropy\": CV.calculate_anisotropy,\n",
-    "    \"correlation\": CV.calculate_correlation,\n",
-    "    \"tilt_abs\": CV.calculate_tilt\n",
-    "}\n",
-    "\n",
-    "all_dicts = [\n",
-    "    {\n",
-    "        \"spatial_cuts\": {\"R\":[0,3.5],\"b\":[3,6],\"l\":[-2,2]},\n",
-    "        \"pop_cuts\": {\"age\": [4,7]},\n",
-    "        \"label\": \"Young\",\n",
-    "        \"color\": \"blue\"\n",
-    "    },\n",
-    "    {\n",
-    "        \"spatial_cuts\": {\"R\":[0,3.5],\"b\":[3,6],\"l\":[-2,2]},\n",
-    "        \"pop_cuts\": {\"age\":[9.5,10]},\n",
-    "        \"label\": \"Old\",\n",
-    "        \"color\": \"red\"\n",
-    "    }\n",
-    "]\n",
-    "\n",
-    "for dic in all_dicts:\n",
-    "    dic[\"df\"] = MF.apply_cuts_to_df(df0, cuts_dict=[dic[\"spatial_cuts\"],dic[\"pop_cuts\"]])\n",
-    "    \n",
-    "    print(dic[\"label\"])\n",
-    "    for func in function_dict:\n",
-    "        print(func)\n",
-    "#         dic[func+\"_errors_low\"],dic[func+\"_errors_high\"] =\\\n",
-    "#             get_sampling_errors(df=df,function=function_dict[func],repeat=500,replacement=False,symmetric=False,sampling_sizes=sampling_sizes,verbose=True)\n",
-    "        dic[func+\"_errors\"],_ =\\\n",
-    "            get_sampling_errors(df=dic[\"df\"],function=function_dict[func],repeat=500,replacement=False,symmetric=True,sampling_sizes=sampling_sizes,verbose=True)\n",
-    "        dic[func+\"_true_error\"],_ = get_sampling_errors(df=dic[\"df\"],function=function_dict[func],sampling_sizes=[len(dic[\"df\"])],repeat=500)\n",
-    "        dic[func] = function_dict[func](dic[\"df\"].vr.values,dic[\"df\"].vl.values)\n",
-    "        print(\"\\n\")"
+    "plt.rcParams[\"xtick.major.size\"] = 6\n",
+    "plt.rcParams[\"xtick.minor.size\"] = 3"
    ]
   },
   {
@@ -856,19 +831,43 @@
     "    \"tilt_abs\": CV.calculate_tilt\n",
     "}\n",
     "\n",
-    "all_dicts = [\n",
+    "all_dicts = [ # select for plotting\n",
+    "#     {\n",
+    "#         \"spatial_cuts\": {\"R\":[0,3.5],\"b\":[3.5,4.5],\"l\":[-2,2]},\n",
+    "#         \"pop_cuts\": {\"age\": [4,7]},\n",
+    "#         \"label\": \"Young\",\n",
+    "#         \"color\": \"blue\"\n",
+    "#     },\n",
+    "#     {\n",
+    "#         \"spatial_cuts\": {\"R\":[0,3.5],\"b\":[3.5,4.5],\"l\":[-2,2]},\n",
+    "#         \"pop_cuts\": {\"age\":[9.5,10]},\n",
+    "#         \"label\": \"Old\",\n",
+    "#         \"color\": \"red\"\n",
+    "#     },\n",
+    "#     {\n",
+    "#         \"spatial_cuts\": {\"R\":[0,3.5],\"b\":[3,6],\"l\":[-2,2]},\n",
+    "#         \"pop_cuts\": {\"age\": [4,7]},\n",
+    "#         \"label\": \"Young\",\n",
+    "#         \"color\": \"blue\"\n",
+    "#     },\n",
+    "#     {\n",
+    "#         \"spatial_cuts\": {\"R\":[0,3.5],\"b\":[3,6],\"l\":[-2,2]},\n",
+    "#         \"pop_cuts\": {\"age\":[9.5,10]},\n",
+    "#         \"label\": \"Old\",\n",
+    "#         \"color\": \"red\"\n",
+    "#     },\n",
     "    {\n",
-    "        \"spatial_cuts\": {\"R\":[0,3.5],\"b\":[3,6],\"l\":[-2,2]},\n",
+    "        \"spatial_cuts\": {\"R\":[0,2],\"b\":[3,6],\"l\":[-2,2]},\n",
     "        \"pop_cuts\": {\"age\": [4,7]},\n",
     "        \"label\": \"Young\",\n",
     "        \"color\": \"blue\"\n",
     "    },\n",
     "    {\n",
-    "        \"spatial_cuts\": {\"R\":[0,3.5],\"b\":[3,6],\"l\":[-2,2]},\n",
+    "        \"spatial_cuts\": {\"R\":[0,2],\"b\":[3,6],\"l\":[-2,2]},\n",
     "        \"pop_cuts\": {\"age\":[9.5,10]},\n",
     "        \"label\": \"Old\",\n",
     "        \"color\": \"red\"\n",
-    "    }\n",
+    "    },\n",
     "]\n",
     "\n",
     "for dic in all_dicts:\n",
@@ -879,9 +878,9 @@
     "        print(func)\n",
     "#         dic[func+\"_errors_low\"],dic[func+\"_errors_high\"] =\\\n",
     "#             get_sampling_errors(df=df,function=function_dict[func],repeat=500,replacement=False,symmetric=False,sampling_sizes=sampling_sizes,verbose=True)\n",
-    "        dic[func+\"_errors\"],_ =\\\n",
+    "        dic[func+\"_errors\"],*_ =\\\n",
     "            get_sampling_errors(df=dic[\"df\"],function=function_dict[func],repeat=500,replacement=False,symmetric=True,sampling_sizes=sampling_sizes,verbose=True)\n",
-    "        dic[func+\"_true_error\"],_ = get_sampling_errors(df=dic[\"df\"],function=function_dict[func],sampling_sizes=[len(dic[\"df\"])],repeat=500)\n",
+    "        dic[func+\"_true_error\"],*_ = get_sampling_errors(df=dic[\"df\"],function=function_dict[func],sampling_sizes=[len(dic[\"df\"])],repeat=500)\n",
     "        dic[func] = function_dict[func](dic[\"df\"].vr.values,dic[\"df\"].vl.values)\n",
     "        print(\"\\n\")"
    ]
@@ -901,8 +900,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.rcParams[\"xtick.major.size\"] = 6\n",
-    "plt.rcParams[\"xtick.minor.size\"] = 3"
+    "from scipy.optimize import curve_fit\n",
+    "\n",
+    "def reciprocal_func(x,a,b,c):\n",
+    "    return a/(x+b)+c\n",
+    "\n",
+    "def inverse_square_func(x,a):\n",
+    "    return a/sqrt(x)\n",
+    "\n",
+    "def show_fit_plot_and_text(ax, x, y, func=reciprocal_func, p0=[39.65,100,0.02], fit_color=\"grey\", text_color=\"grey\", ndec_text=2, text_alpha=1,\\\n",
+    "                       x_eq=0.35,y_eq=0.42, show_function_text=False, show_params_text=True):\n",
+    "\n",
+    "    fit_params, _ = curve_fit(func, p0=p0, xdata=x, ydata=y)\n",
+    "\n",
+    "    ax.plot(x, func(x, *fit_params), color=fit_color, label=r\"$f(x)=\\frac{a}{x+b}+c$\",linestyle=\"--\")\n",
+    "\n",
+    "    if show_function_text:\n",
+    "        ax.text(s=r\"$f(x)=$\",x=x_eq,y=y_eq,transform=ax.transAxes,color=text_color,size=13)\n",
+    "        if func == reciprocal_func:\n",
+    "            ax.text(s=r\"$\\frac{a}{x+b}$\",x=x_eq+0.13,y=y_eq-0.005,transform=ax.transAxes,color=text_color,size=18)\n",
+    "            ax.text(s=r\"$+~c$\",x=x_eq+0.28,y=y_eq,transform=ax.transAxes,color=text_color,size=13)\n",
+    "        elif func == inverse_square_func:\n",
+    "            ax.text(s=r\"$\\frac{a}{\\sqrt(x)}$\",x=x_eq+0.13,y=y_eq-0.005,transform=ax.transAxes,color=text_color,size=18)\n",
+    "\n",
+    "    if show_params_text:\n",
+    "        s = r\"$(\" + str.join(\",\",[\"abcdefg\"[i] for i in range(len(p0))]) + \")=(\" + (len(p0)*\"%s,\").removesuffix(\",\") + \")$\"\n",
+    "        ax.text(x=x_eq,y=y_eq-0.15,transform=ax.transAxes,color=text_color,alpha=1 if row!=nrows-1 else 0.5,size=13,\n",
+    "                 s=s%tuple([MF.return_int_or_dec(param,ndec_text) for param in fit_params]))"
    ]
   },
   {
@@ -925,33 +949,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scipy.optimize import curve_fit\n",
+    "fit_bool = True\n",
+    "# fit_bool = False\n",
     "\n",
-    "# fit_bool = True\n",
-    "fit_bool = False\n",
-    "\n",
-    "if fit_bool:\n",
-    "\n",
-    "    def reciprocal_func(x,a,b,c):\n",
-    "        return a/(x+b)+c\n",
-    "    \n",
-    "    def show_fit_plot_and_text(ax, x, y, func=reciprocal_func, p0=[39.65,100,0.02], fit_color=\"grey\", text_color=\"grey\", ndec_text=2, text_alpha=1,\\\n",
-    "                           x_eq=0.35,y_eq=0.42, show_function_text=False, show_params_text=True):\n",
-    "    \n",
-    "        fit_params, _ = curve_fit(func, p0=p0, xdata=x, ydata=y)\n",
-    "\n",
-    "        ax.plot(x, func(x, *fit_params), color=fit_color, label=r\"$f(x)=\\frac{a}{x+b}+c$\",linestyle=\"--\")\n",
-    "\n",
-    "        if show_function_text:\n",
-    "            ax.text(s=r\"$f(x)=$\",x=x_eq,y=y_eq,transform=ax.transAxes,color=text_color,size=13)\n",
-    "            ax.text(s=r\"$\\frac{a}{x+b}$\",x=x_eq+0.13,y=y_eq-0.005,transform=ax.transAxes,color=text_color,size=18)\n",
-    "            ax.text(s=r\"$+~c$\",x=x_eq+0.28,y=y_eq,transform=ax.transAxes,color=text_color,size=13)\n",
-    "\n",
-    "        if show_params_text:\n",
-    "            ax.text(x=x_eq,y=y_eq-0.15,transform=ax.transAxes,color=text_color,alpha=1 if row!=nrows-1 else 0.5,size=13,\n",
-    "                     s=r\"$(a,b,c)=(%s,%s,%s)$\"%(MF.return_int_or_dec(fit_params[0],ndec_text),\n",
-    "                                                MF.return_int_or_dec(fit_params[1],ndec_text),\n",
-    "                                                MF.return_int_or_dec(fit_params[2],ndec_text)))"
+    "# fit_func = reciprocal_func; p0=[1,10,10]\n",
+    "fit_func = inverse_square_func; p0=[1]"
    ]
   },
   {
@@ -961,15 +963,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# max_sampling_size = max(sampling_sizes)\n",
-    "# xtick_step = 500\n",
-    "# major_locator = 1000\n",
-    "# minor_locator = 250\n",
+    "max_sampling_size = max(sampling_sizes)\n",
+    "xtick_step = 500\n",
+    "major_locator = 1000\n",
+    "minor_locator = 250\n",
     "\n",
-    "max_sampling_size = 1000\n",
-    "xtick_step = 100\n",
-    "major_locator = 200\n",
-    "minor_locator = 50"
+    "# max_sampling_size = 1000\n",
+    "# xtick_step = 100\n",
+    "# major_locator = 200\n",
+    "# minor_locator = 50"
    ]
   },
   {
@@ -1059,11 +1061,13 @@
     "        x = sampling_sizes[max_cond]\n",
     "        \n",
     "        if row != nrows - 1:\n",
-    "            show_fit_plot_and_text(lax, x=x, y=all_dicts[0][func+\"_errors\"][max_cond])\n",
+    "            show_fit_plot_and_text(lax,func=fit_func,x=x,y=all_dicts[0][func+\"_errors\"][max_cond])\n",
     "        \n",
     "        else:\n",
-    "            show_fit_plot_and_text(lax, x=x, y=all_dicts[0][func+\"_errors\"][max_cond],text_color=\"blue\",text_alpha=0.5,y_eq=0.55,x_eq=0.249,p0=[1,10,10])\n",
-    "            show_fit_plot_and_text(lax, x=x, y=all_dicts[1][func+\"_errors\"][max_cond],text_color=\"red\",text_alpha=0.5,p0=[1,10,10], y_eq=0.65,x_eq=0.249)\n",
+    "            show_fit_plot_and_text(lax,func=fit_func,x=x,y=all_dicts[0][func+\"_errors\"][max_cond],text_color=\"blue\",text_alpha=0.5,\\\n",
+    "                                   y_eq=0.55,x_eq=0.249,p0=p0)\n",
+    "            show_fit_plot_and_text(lax,func=fit_func,x=x,y=all_dicts[1][func+\"_errors\"][max_cond],text_color=\"red\",text_alpha=0.5,\\\n",
+    "                                   p0=p0, y_eq=0.65,x_eq=0.249)\n",
     "                \n",
     "    if True: # labels, legend, text\n",
     "        if row == nrows-1:\n",
@@ -1104,107 +1108,6 @@
     "    if save_bool:\n",
     "        print(\"Saving in\",save_path)\n",
     "        plt.savefig(save_path+filename+\".png\",dpi=200,bbox_inches=\"tight\")\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "61",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if False: # Single break \n",
-    "\n",
-    "    nrows = len(function_dict)\n",
-    "\n",
-    "    fig,axs = plt.subplots(figsize=(8,10),ncols=2,nrows=nrows,gridspec_kw={\"width_ratios\":[1,0.1],\"wspace\":0.1,\"hspace\":0})\n",
-    "\n",
-    "    for row,func in enumerate(function_dict):\n",
-    "        lax,rax = axs[row]\n",
-    "\n",
-    "        if True: # broken axes\n",
-    "            lax.spines['right'].set_visible(False)\n",
-    "            lax.tick_params(which='both',right=False)\n",
-    "            rax.spines['left'].set_visible(False)\n",
-    "            rax.tick_params(which='both',left=False)\n",
-    "\n",
-    "            d = 0.02\n",
-    "            lax.plot((1-d,1+d), (-d,+d), transform=lax.transAxes, color='k', clip_on=False,lw=\"1\")\n",
-    "            lax.plot((1-d,1+d),(1-d,1+d), transform=lax.transAxes, color='k', clip_on=False,lw=\"1\")\n",
-    "\n",
-    "            rax.plot((-10*d,+10*d), (1-d,1+d), transform=rax.transAxes, color='k', clip_on=False,lw=\"1\")\n",
-    "            rax.plot((-10*d,+10*d), (-d,+d), transform=rax.transAxes, color='k', clip_on=False,lw=\"1\")\n",
-    "\n",
-    "        for dic in all_dicts:\n",
-    "            total_N = len(dic[\"df\"])\n",
-    "\n",
-    "            lax.plot(sampling_sizes,dic[func+\"_errors\"],label=dic[\"label\"],color=dic[\"color\"],alpha=0.7)\n",
-    "            rax.scatter(total_N,dic[func+\"_true_error\"][0],marker=\"*\",color=dic[\"color\"],label=\"Bootstrap error\")\n",
-    "\n",
-    "            lax.set_xticks([50]+list(np.arange(500,5000+500,500)))\n",
-    "            rax.set_xticks([total_N])\n",
-    "\n",
-    "            lax.set_xlim(left=0)\n",
-    "\n",
-    "            for ax in [lax,rax]:\n",
-    "                ax.tick_params(axis='x', which='major', pad=10)\n",
-    "                ax.set_ylim(bottom=0)\n",
-    "            #     ax.spines['top'].set_visible(True)\n",
-    "            # rax.spines[\"right\"].set_visible(True)\n",
-    "            if row != nrows - 1:\n",
-    "                rax.xaxis.set_ticklabels([])\n",
-    "                lax.xaxis.set_ticklabels([])\n",
-    "            else:\n",
-    "                lax.set_xlabel(\"Random downsampling sample size\")\n",
-    "\n",
-    "            rax.yaxis.set_ticks(lax.get_yticks())\n",
-    "            rax.yaxis.set_ticklabels([])\n",
-    "\n",
-    "            if row == 1:\n",
-    "                lax.set_ylabel(r\"Mean absolute deviation from true value\")\n",
-    "            lax.legend()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "62",
-   "metadata": {},
-   "source": [
-    "Asymmetric"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "63",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if False:\n",
-    "\n",
-    "    plt.rcParams[\"font.size\"] = 18\n",
-    "\n",
-    "    fig,ax=plt.subplots(figsize=(10,8))\n",
-    "\n",
-    "    ax.fill_between(bootstrap_sizes,y1=true_value-errors_low,y2=true_value+errors_high)\n",
-    "    ax.hlines(y=true_value,xmin=min(bootstrap_sizes),xmax=max(bootstrap_sizes),color=\"blue\",label=\"True value\")\n",
-    "\n",
-    "    true_std_low,true_std_high,_ = CE.get_std_bootstrap(function=CV.calculate_correlation,vx=df.vr.values,vy=df.vl.values,\\\n",
-    "                                     bootstrapconfig=BootstrapConfig(symmetric=False))\n",
-    "    ax.errorbar(x=5500,y=[true_value],yerr=[[true_std_low],[true_std_high]],color=\"blue\",capsize=5,label=\"True error\",linestyle=\"\")\n",
-    "\n",
-    "    ax.scatter(x=[5100,5200,5300],y=3*[true_value],color=\"grey\",s=5)\n",
-    "\n",
-    "    xticks = [50]+list(np.arange(500,6000,500))\n",
-    "    ax.set_xticks(xticks, labels=[(str(t) if t != 5500 else f\"{len(df)}\") for t in xticks])\n",
-    "    ax.set_xlim(min(bootstrap_sizes),max(bootstrap_sizes) + 650)\n",
-    "\n",
-    "    ax.set_xlabel(\"Size of each bootstrap sample\")\n",
-    "    ax.set_ylabel(r\"Mean absolute deviation from true value, with $R=500$\")\n",
-    "    ax.set_title(\"Correlation\")\n",
-    "    ax.legend()\n",
-    "\n",
     "    plt.show()"
    ]
   }
