--- a/notebooks/other_notebooks/errors.ipynb
+++ b/notebooks/other_notebooks/errors.ipynb
@@ -737,13 +737,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_sampling_errors(df, function, sampling_sizes, symmetric=True, replacement=True, repeat=500, verbose=False):\n",
+    "def get_sampling_errors(df, function, sampling_sizes, symmetric=True, replacement=True, repeat=500, tilt=False, absolute=True, verbose=False):\n",
     "\n",
     "    errors_low = np.empty_like(sampling_sizes,dtype=float)\n",
     "    errors_high = np.empty_like(sampling_sizes,dtype=float)\n",
     "\n",
     "    for s,size in enumerate(sampling_sizes):\n",
-    "        errors_low[s],errors_high[s],values = CE.get_std_bootstrap(function=function,vx=df.vr.values,vy=df.vl.values,\\\n",
+    "        errors_low[s],errors_high[s],values = CE.get_std_bootstrap(function=function,vx=df.vr.values,vy=df.vl.values,tilt=tilt,absolute=absolute,\\\n",
     "                                     bootstrapconfig=BootstrapConfig(bootstrap_size=size,replacement=replacement,symmetric=symmetric,repeats=repeat))\n",
     "        \n",
     "        if verbose:\n",
@@ -814,13 +814,28 @@
    "outputs": [],
    "source": [
     "plt.rcParams[\"xtick.major.size\"] = 6\n",
-    "plt.rcParams[\"xtick.minor.size\"] = 3"
+    "plt.rcParams[\"xtick.minor.size\"] = 3\n",
+    "\n",
+    "plt.rcParams[\"font.size\"] = 19"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MC_symmetric = True\n",
+    "# MC_symmetric = False\n",
+    "\n",
+    "repeats = 500"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -876,21 +891,30 @@
     "    print(dic[\"label\"])\n",
     "    for func in function_dict:\n",
     "        print(func)\n",
-    "#         dic[func+\"_errors_low\"],dic[func+\"_errors_high\"] =\\\n",
-    "#             get_sampling_errors(df=df,function=function_dict[func],repeat=500,replacement=False,symmetric=False,sampling_sizes=sampling_sizes,verbose=True)\n",
+    "        \n",
     "        dic[func+\"_errors\"],*_ =\\\n",
-    "            get_sampling_errors(df=dic[\"df\"],function=function_dict[func],repeat=500,replacement=False,symmetric=True,sampling_sizes=sampling_sizes,verbose=True)\n",
-    "        dic[func+\"_true_error\"],*_ = get_sampling_errors(df=dic[\"df\"],function=function_dict[func],sampling_sizes=[len(dic[\"df\"])],repeat=500)\n",
+    "            get_sampling_errors(df=dic[\"df\"],function=function_dict[func],repeat=repeats,replacement=False,symmetric=True,sampling_sizes=sampling_sizes,\\\n",
+    "                                tilt=func==\"tilt_abs\", absolute=True, verbose=True)\n",
+    "        \n",
+    "        dic[func+\"_true_error\"],*_ = get_sampling_errors(df=dic[\"df\"],function=function_dict[func],sampling_sizes=[len(dic[\"df\"])],repeat=repeats,\\\n",
+    "                                                        tilt=func==\"tilt_abs\", absolute=True)\n",
+    "        \n",
     "        dic[func] = function_dict[func](dic[\"df\"].vr.values,dic[\"df\"].vl.values)\n",
+    "        \n",
+    "        montecarloconfig = MonteCarloConfig(perturbed_vars=[\"d\"],repeats=repeats,error_frac=0.2,symmetric=MC_symmetric,\\\n",
+    "                                            affected_cuts_dict={k:v for k,v in dic[\"spatial_cuts\"].items() if k == \"R\"})\n",
+    "        \n",
+    "        dic[func+\"_MC_d_0.2_error_low\"],dic[func+\"_MC_d_0.2_error_high\"],*_ =\\\n",
+    "            CE.get_std_MC(df=dic[\"df\"],function=function_dict[func],true_value=dic[func],vel_x_var=\"r\",vel_y_var=\"l\",tilt=func==\"tilt_abs\", absolute=True,\\\n",
+    "                          montecarloconfig=montecarloconfig)\n",
+    "        \n",
+    "        montecarloconfig.error_frac = 0.1\n",
+    "        \n",
+    "        dic[func+\"_MC_d_0.1_error_low\"],dic[func+\"_MC_d_0.1_error_high\"],*_ =\\\n",
+    "            CE.get_std_MC(df=dic[\"df\"],function=function_dict[func],true_value=dic[func],vel_x_var=\"r\",vel_y_var=\"l\",tilt=func==\"tilt_abs\", absolute=True,\\\n",
+    "                          montecarloconfig=montecarloconfig)\n",
+    "            \n",
     "        print(\"\\n\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "54",
-   "metadata": {},
-   "source": [
-    "Symmetric"
    ]
   },
   {
@@ -902,64 +926,42 @@
    "source": [
     "from scipy.optimize import curve_fit\n",
     "\n",
-    "def reciprocal_func(x,a,b,c):\n",
-    "    return a/(x+b)+c\n",
+    "class ReciprocalFunc():\n",
+    "    def __init__(self, p0=[39.65,100,0.02]):\n",
+    "        self.func = lambda x,a,b,c: a/(x+b)+c\n",
+    "        self.name = \"reciprocal\"\n",
+    "        self.label = r\"$f(n)=\\frac{a}{n+b}+c$\"\n",
+    "        self.p0 = p0\n",
+    "    def fit(self,x,y):\n",
+    "        self.fit_params,_ = curve_fit(f=self.func, p0=self.p0, xdata=x,ydata=y)\n",
+    "        \n",
+    "class InverseSquareFunc():\n",
+    "    def __init__(self, p0=[10]):\n",
+    "        self.func = lambda x,a: a/(np.sqrt(x))\n",
+    "        self.name = \"inverse_square\"\n",
+    "        self.label = r\"$f(n)=\\frac{a}{\\sqrt{n}}$\"\n",
+    "        self.p0 = p0\n",
+    "    def fit(self,x,y):\n",
+    "        self.fit_params,_ = curve_fit(f=self.func, p0=self.p0, xdata=x,ydata=y)\n",
+    "        \n",
+    "def show_fit_params_text(ax, Func, x_eq=0.6,y_eq=0.42, color=\"grey\", ndec_text=2, alpha=1, size=13, units=\"\"):\n",
+    "    \n",
+    "    if not hasattr(fit_func,\"fit_params\"):\n",
+    "        raise AttributeError(\"Fit the function first!\")\n",
+    "    \n",
+    "    abc_str = str.join(\",\",[\"abcdefg\"[i] for i in range(len(Func.p0))])\n",
+    "    values_str = (len(Func.p0)*\"%s,\").removesuffix(\",\")\n",
+    "    final_str = (r\"$(\" if len(Func.p0)>1 else r\"$\") + abc_str + (\")=(\" if len(Func.p0)>1 else \"=\") + values_str + (\")$\" if len(Func.p0)>1 else \"$\")\n",
+    "    final_str += units\n",
     "\n",
-    "def inverse_square_func(x,a):\n",
-    "    return a/sqrt(x)\n",
-    "\n",
-    "def show_fit_plot_and_text(ax, x, y, func=reciprocal_func, p0=[39.65,100,0.02], fit_color=\"grey\", text_color=\"grey\", ndec_text=2, text_alpha=1,\\\n",
-    "                       x_eq=0.35,y_eq=0.42, show_function_text=False, show_params_text=True):\n",
-    "\n",
-    "    fit_params, _ = curve_fit(func, p0=p0, xdata=x, ydata=y)\n",
-    "\n",
-    "    ax.plot(x, func(x, *fit_params), color=fit_color, label=r\"$f(x)=\\frac{a}{x+b}+c$\",linestyle=\"--\")\n",
-    "\n",
-    "    if show_function_text:\n",
-    "        ax.text(s=r\"$f(x)=$\",x=x_eq,y=y_eq,transform=ax.transAxes,color=text_color,size=13)\n",
-    "        if func == reciprocal_func:\n",
-    "            ax.text(s=r\"$\\frac{a}{x+b}$\",x=x_eq+0.13,y=y_eq-0.005,transform=ax.transAxes,color=text_color,size=18)\n",
-    "            ax.text(s=r\"$+~c$\",x=x_eq+0.28,y=y_eq,transform=ax.transAxes,color=text_color,size=13)\n",
-    "        elif func == inverse_square_func:\n",
-    "            ax.text(s=r\"$\\frac{a}{\\sqrt(x)}$\",x=x_eq+0.13,y=y_eq-0.005,transform=ax.transAxes,color=text_color,size=18)\n",
-    "\n",
-    "    if show_params_text:\n",
-    "        s = r\"$(\" + str.join(\",\",[\"abcdefg\"[i] for i in range(len(p0))]) + \")=(\" + (len(p0)*\"%s,\").removesuffix(\",\") + \")$\"\n",
-    "        ax.text(x=x_eq,y=y_eq-0.15,transform=ax.transAxes,color=text_color,alpha=1 if row!=nrows-1 else 0.5,size=13,\n",
-    "                 s=s%tuple([MF.return_int_or_dec(param,ndec_text) for param in fit_params]))"
+    "    ax.text(x=x_eq,y=y_eq,transform=ax.transAxes,color=color,alpha=alpha,size=size,\n",
+    "             s=final_str%tuple([MF.return_int_or_dec(param,ndec_text) for param in Func.fit_params]))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "56",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hard_coded_ylims_dict = {\n",
-    "    \"correlation\": [0,0.149],\n",
-    "    \"tilt_abs\": [0,33]\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "57",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fit_bool = True\n",
-    "# fit_bool = False\n",
-    "\n",
-    "# fit_func = reciprocal_func; p0=[1,10,10]\n",
-    "fit_func = inverse_square_func; p0=[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -977,18 +979,67 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ylog_bool = True\n",
+    "# ylog_bool = False\n",
+    "\n",
+    "xlog_bool = True\n",
+    "# xlog_bool = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fit_bool = True\n",
+    "# fit_bool = False\n",
+    "\n",
+    "# fit_func = ReciprocalFunc(p0=[1,10,10])\n",
+    "fit_func = InverseSquareFunc(p0=[1])\n",
+    "\n",
+    "x_eq = 0.4 if not xlog_bool else 0.6\n",
+    "y_eq = 0.5 if not (xlog_bool and ylog_bool) else 0.3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "59",
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_bool = True\n",
-    "# save_bool = False"
+    "hard_coded_ylims_dict = {\n",
+    "    \"anisotropy\": [0 if not ylog_bool else 0.001,0.3],\n",
+    "    \"correlation\": [0 if not ylog_bool else 0.001,0.149],\n",
+    "    \"tilt_abs\": [0 if not ylog_bool else 0.1,33]\n",
+    "}\n",
+    "\n",
+    "if xlog_bool and ylog_bool:\n",
+    "    for k in hard_coded_ylims_dict:\n",
+    "        hard_coded_ylims_dict[k][1] *= 1.5"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save_bool = True\n",
+    "save_bool = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1033,53 +1084,75 @@
     "            \n",
     "        lax.scatter(x=-100,y=0,marker=\"*\",color=\"k\",label=\"Bootstrap error\")\n",
     "    \n",
-    "    if True: # ticks, lims\n",
-    "#         lax.set_xticks([50]+list(np.arange(xtick_step,max_sampling_size+xtick_step,xtick_step)))\n",
-    "        lax.set_xlim(0,max_sampling_size+minor_locator*0.9)\n",
-    "        lax.xaxis.set_major_locator(ticker.MultipleLocator(major_locator))\n",
-    "        lax.xaxis.set_minor_locator(ticker.MultipleLocator(minor_locator))\n",
+    "    if True: # ticks, lims, logscale\n",
     "        \n",
-    "        for ax in [cax,rax]:\n",
-    "#             ax.tick_params(axis=\"x\",size=0)\n",
-    "            ax.yaxis.set_ticks(lax.get_yticks())\n",
-    "            ax.yaxis.set_ticklabels([])\n",
+    "        if xlog_bool:\n",
+    "            lax.set_xscale(\"log\")\n",
+    "        \n",
+    "        lax_leftlim = 40 if xlog_bool else 0\n",
+    "        lax.set_xlim(lax_leftlim,max_sampling_size+minor_locator*0.9)\n",
+    "        \n",
+    "        if not xlog_bool:\n",
+    "            lax.xaxis.set_major_locator(ticker.MultipleLocator(major_locator))\n",
+    "            lax.xaxis.set_minor_locator(ticker.MultipleLocator(minor_locator))\n",
+    "#             lax.set_xticks([50]+list(np.arange(xtick_step,max_sampling_size+xtick_step,xtick_step)))\n",
     "        \n",
     "        for ax in [lax,cax,rax]:\n",
     "            ax.tick_params(axis='x', which='major', pad=10)\n",
     "            \n",
+    "            if ylog_bool:\n",
+    "                ax.set_yscale(\"log\")\n",
+    "                \n",
+    "            if ax in [cax,rax]:\n",
+    "                ax.yaxis.set_ticklabels([])\n",
+    "            \n",
     "            if func in hard_coded_ylims_dict:\n",
     "                ax.set_ylim(hard_coded_ylims_dict[func])\n",
     "            else:\n",
-    "                ax.set_ylim(bottom=0)\n",
+    "                ax.set_ylim(bottom=0.005 if ylog_bool else 0)\n",
     "\n",
     "            if row != nrows - 1:\n",
     "                ax.xaxis.set_ticklabels([])\n",
     "                ax.xaxis.set_ticklabels([])\n",
-    "    \n",
+    "        \n",
     "    if fit_bool:\n",
-    "        max_cond = sampling_sizes<=max_sampling_size\n",
-    "        x = sampling_sizes[max_cond]\n",
     "        \n",
-    "        if row != nrows - 1:\n",
-    "            show_fit_plot_and_text(lax,func=fit_func,x=x,y=all_dicts[0][func+\"_errors\"][max_cond])\n",
+    "        x_plot = np.linspace(min(sampling_sizes),max_sampling_size,500)\n",
     "        \n",
+    "        if func != \"tilt_abs\":\n",
+    "            fit_func.fit(x = sampling_sizes[sampling_sizes<=max_sampling_size], y = all_dicts[0][func+\"_errors\"][sampling_sizes<=max_sampling_size])\n",
+    "            lax.plot(x_plot, fit_func.func(x_plot, *fit_func.fit_params), color=\"grey\", linestyle=\"--\")\n",
+    "            show_fit_params_text(ax=lax,Func=fit_func,color=\"grey\",x_eq=x_eq,y_eq=y_eq)\n",
     "        else:\n",
-    "            show_fit_plot_and_text(lax,func=fit_func,x=x,y=all_dicts[0][func+\"_errors\"][max_cond],text_color=\"blue\",text_alpha=0.5,\\\n",
-    "                                   y_eq=0.55,x_eq=0.249,p0=p0)\n",
-    "            show_fit_plot_and_text(lax,func=fit_func,x=x,y=all_dicts[1][func+\"_errors\"][max_cond],text_color=\"red\",text_alpha=0.5,\\\n",
-    "                                   p0=p0, y_eq=0.65,x_eq=0.249)\n",
+    "            for (pop_idx,color,y) in zip([0,1],[\"blue\",\"red\"],[y_eq-0.04,y_eq+0.04]):\n",
+    "                fit_func.fit(x = sampling_sizes[sampling_sizes<=max_sampling_size], y = all_dicts[pop_idx][func+\"_errors\"][sampling_sizes<=max_sampling_size])\n",
+    "\n",
+    "                lax.plot(x_plot, fit_func.func(x_plot, *fit_func.fit_params), color=color, linestyle=\"--\")\n",
+    "                show_fit_params_text(ax=lax,Func=fit_func,alpha=1 if row!=nrows-1 else 0.5,color=color,x_eq=x_eq,y_eq=y,units=mapf.get_units(\"tilt_abs\"))\n",
+    "                \n",
+    "        lax.plot([-100,-100],[0,1],label=fit_func.label,linestyle=\"--\",color=\"grey\") # just for the legend label\n",
     "                \n",
     "    if True: # labels, legend, text\n",
     "        if row == nrows-1:\n",
     "#             lax.set_xlabel(\"Random downsampling sample size\")\n",
-    "            lax.text(s=\"Downsampling size\",x=0.42,y=-0.25,transform=lax.transAxes,size=\"medium\")\n",
+    "            lax.text(s=\"Sample size\",x=0.5,y=-0.25,transform=lax.transAxes,size=\"medium\")\n",
     "\n",
     "        if row == 0:\n",
-    "            lax.legend()\n",
+    "            fig.legend(loc=(0.65,0.77) if not (xlog_bool and ylog_bool) else (0.16,0.7))\n",
     "        elif row == 1:\n",
     "            lax.set_ylabel(r\"Mean squared deviation from true value\")\n",
-    "            \n",
-    "        lax.text(s=mapf.get_kinematic_titles_dict(\"r\",\"l\")[func.removesuffix(\"_abs\")],x=0.2,y=0.8,transform=lax.transAxes,size=15)\n",
+    "        \n",
+    "#         lax.set_ylabel(\"Error\")\n",
+    "        \n",
+    "        if xlog_bool and ylog_bool:\n",
+    "            x_func_text = 0.95\n",
+    "        elif xlog_bool:\n",
+    "            x_func_text = 0.3\n",
+    "        else:\n",
+    "            x_func_text = 0.2\n",
+    "        fig.text(s=mapf.get_kinematic_titles_dict(\"r\",\"l\")[func.removesuffix(\"_abs\")],x=x_func_text,y=0.8,transform=lax.transAxes,size=15)\n",
+    "        \n",
+    "        fig.align_labels()\n",
     "\n",
     "if True: # filename, save and show\n",
     "    save_path = general_path+\"graphs/other_plots/downsampling_errors/\"\n",
@@ -1099,7 +1172,14 @@
     "    \n",
     "    for dic in all_dicts:\n",
     "        filename += '_'+MF.extract_str_from_cuts_dict(dic[\"pop_cuts\"])\n",
-    "        \n",
+    "    \n",
+    "    if xlog_bool and ylog_bool:\n",
+    "        filename += \"_xylog\"\n",
+    "    elif xlog_bool:\n",
+    "        filename += \"_xlog\"\n",
+    "    elif ylog_bool:\n",
+    "        filename += \"_ylog\"\n",
+    "    \n",
     "    if fit_bool:\n",
     "        filename += \"_fit\"\n",
     "        \n",
@@ -1110,6 +1190,14 @@
     "        plt.savefig(save_path+filename+\".png\",dpi=200,bbox_inches=\"tight\")\n",
     "    plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
