add MC to sampling error plot

--- a/notebooks/other_notebooks/errors.ipynb
+++ b/notebooks/other_notebooks/errors.ipynb
@@ -406,10 +406,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_bool = True\n",
-    "# data_bool = False\n",
+    "# data_bool = True\n",
+    "data_bool = False\n",
     "\n",
-    "perturbed_vars = [\"d\",\"vr\",\"pmra\",\"pmdec\"]"
+    "# perturbed_vars = [\"d\",\"vr\",\"pmra\",\"pmdec\"]\n",
+    "perturbed_vars = [\"d\"]"
    ]
   },
   {
@@ -445,11 +446,12 @@
    "source": [
     "if data_bool:\n",
     "#     cuts_dict = {\"FeH\":[-1,-0.21], \"l\":[-2,2], \"R\":[0,3.5]}\n",
-    "    cuts_dict = {\"FeH\":[-0.21,0.61], \"l\":[-2,2], \"R\":[0,3.5]}\n",
+    "#     cuts_dict = {\"FeH\":[-0.21,0.61], \"l\":[-2,2], \"R\":[0,3.5]}\n",
+    "    cuts_dict = {\"FeH\":[-0.21,0.61], \"l\":[-2,2], \"R\":[0,2]}\n",
     "else:\n",
     "#     cuts_dict={\"age\":[0,4],\"R\":[0,5],\"l\":[-2,2],\"b\":[0,0.01], \"R\":[0,3.5]} # nuclear disc\n",
-    "    cuts_dict={\"age\":[4,7],\"l\":[-2,2],\"b\":[3.5,4], \"R\":[0,3.5]} # young pop\n",
-    "#         cuts_dict={\"age\":[4,7],\"l\":[-2,2],\"b\":[3,6], \"R\":[0,3.5]} # young pop no R cut"
+    "#     cuts_dict={\"age\":[4,7],\"l\":[-2,2],\"b\":[3.5,4], \"R\":[0,3.5]} # young pop\n",
+    "    cuts_dict={\"age\":[4,7],\"l\":[-2,2],\"b\":[4.5,5.5], \"R\":[0,2]} # young pop"
    ]
   },
   {
@@ -502,9 +504,9 @@
    "outputs": [],
    "source": [
     "if \"d\" in perturbed_vars:\n",
-    "    affected_cuts_dict = {\"R\":[0,3.5]}\n",
+    "    affected_cuts_dict = {k:v for k,v in cuts_dict.items() if k in [\"d\",\"R\"]}\n",
     "else:\n",
-    "    affected_cuts_dict = {}\n",
+    "    affected_cuts_dict = None\n",
     "    \n",
     "repeats = 5000"
    ]
@@ -518,7 +520,7 @@
    "source": [
     "montecarloconfig = MonteCarloConfig(perturbed_vars=perturbed_vars,affected_cuts_dict=affected_cuts_dict,error_frac=frac_error,repeats=repeats,symmetric=False)\n",
     "\n",
-    "bootstrapconfig = BootstrapConfig(repeats=repeats,symmetric=True)"
+    "bootstrapconfig = BootstrapConfig(repeats=repeats,symmetric=True,replacement=True)"
    ]
   },
   {
@@ -575,9 +577,9 @@
     "if True: # boot & MC value hist\n",
     "    fig,ax=plt.subplots()\n",
     "    if MC_bar_width is not None:\n",
-    "        ax.hist(MC_values,bins=50,color=\"blue\",alpha=0.7,label=fr\"MC values ($R={repeats}$)\",width=MC_bar_width)\n",
+    "        ax.hist(MC_values,bins=50,color=\"blue\",alpha=0.5,label=fr\"MC values ($R={repeats}$)\",width=MC_bar_width)\n",
     "    else: # It doesn't like it if I pass width=None and I couldn't find what the default is\n",
-    "        ax.hist(MC_values,bins=50,color=\"blue\",alpha=0.7,label=fr\"MC values ($R={repeats}$)\")\n",
+    "        ax.hist(MC_values,bins=50,color=\"blue\",alpha=0.5,label=fr\"MC values ($R={repeats}$)\")\n",
     "    if boot_hist_bool:\n",
     "        ax.hist(boot_vals,bins=50,color=\"green\",alpha=0.5, label=fr\"Bootstrap values ($R={repeats}$)\")\n",
     "    ax.axvline(true_value,color=\"red\",label=\"True value\")\n",
@@ -737,7 +739,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_sampling_errors(df, function, sampling_sizes, symmetric=True, replacement=True, repeat=500, tilt=False, absolute=True, verbose=False):\n",
+    "def get_sampling_errors(df, function, sampling_sizes, symmetric=True, replacement=False, repeat=500, tilt=False, absolute=True, verbose=False):\n",
     "\n",
     "    errors_low = np.empty_like(sampling_sizes,dtype=float)\n",
     "    errors_high = np.empty_like(sampling_sizes,dtype=float)\n",
@@ -749,7 +751,9 @@
     "        if verbose:\n",
     "            print(size,end=\"; \")\n",
     "    \n",
-    "    return errors_low,errors_high,values"
+    "    return errors_low if len(errors_low)>1 else errors_low[0],\\\n",
+    "           errors_high if len(errors_high)>1 else errors_high[0],\\\n",
+    "           values"
    ]
   },
   {
@@ -767,11 +771,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = MF.apply_cuts_to_df(df0, cuts_dict=[{\"R\":[0,3.5],\"b\":[3,6],\"l\":[-2,2],\"age\": [4,7]}])\n",
+    "all_cuts_dict = {\"R\":[0,2],\"b\":[3,6],\"l\":[-2,2],\"age\": [4,7]}\n",
     "\n",
-    "true_val = CV.calculate_correlation(df.vr.values,df.vl.values)\n",
+    "df = MF.apply_cuts_to_df(df0, cuts_dict=all_cuts_dict)\n",
     "\n",
-    "print(true_val)"
+    "function = CV.calculate_correlation\n",
+    "\n",
+    "true_val = function(df.vr.values,df.vl.values)\n",
+    "\n",
+    "print(\"True value:\",true_val)\n",
+    "\n",
+    "montecarloconfig = MonteCarloConfig(perturbed_vars=[\"d\"],repeats=500,error_frac=0.2,symmetric=False, \\\n",
+    "                                    affected_cuts_dict={k:v for k,v in all_cuts_dict.items() if k == \"R\"})\n",
+    "        \n",
+    "df_MC = MF.apply_cuts_to_df(df0, cuts_dict=montecarloconfig.clean_value_cuts_dict(all_cuts_dict))\n",
+    "std_MC_low,std_MC_high,MC_values,_ = CE.get_std_MC(df=df_MC,function=function,true_value=true_val,vel_x_var=\"r\",vel_y_var=\"l\",tilt=False, absolute=True,\\\n",
+    "                  montecarloconfig=montecarloconfig)\n",
+    "\n",
+    "print(\"Std MC:\",std_MC_low,std_MC_high)\n",
+    "\n",
+    "std,_,boot_vals = get_sampling_errors(df=df,function=function,repeat=500,replacement=True,symmetric=True,sampling_sizes=[len(df)],verbose=False)\n",
+    "print(\"Std boot:\",std)"
    ]
   },
   {
@@ -782,16 +802,23 @@
    "outputs": [],
    "source": [
     "bins = 50\n",
-    "sizes = [50,100,300,1000,5000,10000]\n",
+    "sizes = [50,100,300,1000,5000,10000,len(df)]\n",
     "\n",
     "fig,ax=plt.subplots()\n",
     "\n",
     "for s in sizes:\n",
-    "    _,_,vals = get_sampling_errors(df=df,function=CV.calculate_correlation,repeat=500,replacement=False,symmetric=True,sampling_sizes=[s],verbose=True)\n",
-    "\n",
-    "    ax.hist(vals,bins=bins,alpha=0.5,label=s)\n",
+    "    replacement = False if s != len(df) else True\n",
+    "    label = s if s!=len(df) else f\"Bootstrap ({s})\"\n",
     "    \n",
-    "ax.axvline(true_val,color=\"red\")\n",
+    "    std,_,vals = get_sampling_errors(df=df,function=function,repeat=500,replacement=replacement,symmetric=True,sampling_sizes=[s],verbose=True)\n",
+    "\n",
+    "    ax.hist(vals,bins=bins,alpha=0.7,label=label)\n",
+    "    \n",
+    "ax.hist(MC_values,color=\"cyan\",label=\"MC 20% distance error\",alpha=0.7)\n",
+    "    \n",
+    "ax.set_yscale(\"log\")\n",
+    "    \n",
+    "ax.axvline(true_val,color=\"grey\",label=\"True value\",linestyle=\"--\")\n",
     "ax.legend()\n",
     "ax.set_xlabel(\"Correlation\")\n",
     "ax.set_ylabel(r\"$N$\")\n",
@@ -826,8 +853,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MC_symmetric = True\n",
-    "# MC_symmetric = False\n",
+    "# MC_symmetric = True\n",
+    "MC_symmetric = False\n",
     "\n",
     "repeats = 500"
    ]
@@ -896,23 +923,32 @@
     "            get_sampling_errors(df=dic[\"df\"],function=function_dict[func],repeat=repeats,replacement=False,symmetric=True,sampling_sizes=sampling_sizes,\\\n",
     "                                tilt=func==\"tilt_abs\", absolute=True, verbose=True)\n",
     "        \n",
-    "        dic[func+\"_true_error\"],*_ = get_sampling_errors(df=dic[\"df\"],function=function_dict[func],sampling_sizes=[len(dic[\"df\"])],repeat=repeats,\\\n",
-    "                                                        tilt=func==\"tilt_abs\", absolute=True)\n",
+    "        dic[func+\"_bootstrap_error\"],*_ = get_sampling_errors(df=dic[\"df\"],function=function_dict[func],sampling_sizes=[len(dic[\"df\"])],repeat=repeats,\\\n",
+    "                                                        tilt=func==\"tilt_abs\", absolute=True, replacement=True)\n",
+    "        \n",
+    "        print(\"Bootstrap error:\",dic[func+\"_bootstrap_error\"])\n",
     "        \n",
     "        dic[func] = function_dict[func](dic[\"df\"].vr.values,dic[\"df\"].vl.values)\n",
     "        \n",
     "        montecarloconfig = MonteCarloConfig(perturbed_vars=[\"d\"],repeats=repeats,error_frac=0.2,symmetric=MC_symmetric,\\\n",
     "                                            affected_cuts_dict={k:v for k,v in dic[\"spatial_cuts\"].items() if k == \"R\"})\n",
     "        \n",
-    "        dic[func+\"_MC_d_0.2_error_low\"],dic[func+\"_MC_d_0.2_error_high\"],*_ =\\\n",
-    "            CE.get_std_MC(df=dic[\"df\"],function=function_dict[func],true_value=dic[func],vel_x_var=\"r\",vel_y_var=\"l\",tilt=func==\"tilt_abs\", absolute=True,\\\n",
+    "        df_MC = MF.apply_cuts_to_df(df0, cuts_dict=montecarloconfig.clean_value_cuts_dict([dic[\"spatial_cuts\"],dic[\"pop_cuts\"]]))\n",
+    "        \n",
+    "#         dic[func+\"_MC_d_0.2_error_low\"],dic[func+\"_MC_d_0.2_error_high\"],*_ =\\\n",
+    "        dic[func+\"_MC_d_0.2_error_low\"],dic[func+\"_MC_d_0.2_error_high\"],MC_values,_ =\\\n",
+    "            CE.get_std_MC(df=df_MC,function=function_dict[func],true_value=dic[func],vel_x_var=\"r\",vel_y_var=\"l\",tilt=func==\"tilt_abs\", absolute=True,\\\n",
     "                          montecarloconfig=montecarloconfig)\n",
+    "    \n",
+    "        print(\"MC d errors 0.2 frac:\",dic[func+\"_MC_d_0.2_error_low\"],dic[func+\"_MC_d_0.2_error_high\"])\n",
     "        \n",
     "        montecarloconfig.error_frac = 0.1\n",
     "        \n",
     "        dic[func+\"_MC_d_0.1_error_low\"],dic[func+\"_MC_d_0.1_error_high\"],*_ =\\\n",
-    "            CE.get_std_MC(df=dic[\"df\"],function=function_dict[func],true_value=dic[func],vel_x_var=\"r\",vel_y_var=\"l\",tilt=func==\"tilt_abs\", absolute=True,\\\n",
+    "            CE.get_std_MC(df=df_MC,function=function_dict[func],true_value=dic[func],vel_x_var=\"r\",vel_y_var=\"l\",tilt=func==\"tilt_abs\", absolute=True,\\\n",
     "                          montecarloconfig=montecarloconfig)\n",
+    "        \n",
+    "        print(\"MC d errors 0.1 frac:\",dic[func+\"_MC_d_0.1_error_low\"],dic[func+\"_MC_d_0.1_error_high\"])\n",
     "            \n",
     "        print(\"\\n\")"
    ]
@@ -1079,10 +1115,15 @@
     "                     label=dic[\"label\"],color=dic[\"color\"],alpha=0.7)\n",
     "\n",
     "        for dic,ax in zip(all_dicts,[cax,rax]):\n",
-    "            ax.scatter(len(dic[\"df\"]),dic[func+\"_true_error\"][0],marker=\"*\",color=dic[\"color\"])\n",
-    "            ax.set_xticks([len(dic[\"df\"])])\n",
+    "            ax.scatter(len(dic[\"df\"]),dic[func+\"_bootstrap_error\"][0],marker=\"*\",color=dic[\"color\"])\n",
     "            \n",
-    "        lax.scatter(x=-100,y=0,marker=\"*\",color=\"k\",label=\"Bootstrap error\")\n",
+    "            ax.scatter(len(dic[\"df\"]),dic[func+\"_MC_d_0.2_error_low\"],marker=\"_\",color=dic[\"color\"])\n",
+    "            ax.scatter(len(dic[\"df\"]),dic[func+\"_MC_d_0.2_error_high\"],marker=\"_\",color=dic[\"color\"])\n",
+    "            \n",
+    "            ax.set_xticks([len(dic[\"df\"])])\n",
+    "                        \n",
+    "        lax.scatter(x=-100,y=0,marker=\"*\",color=\"k\",label=\"Bootstrap error\") # just for the legend label\n",
+    "        lax.scatter(x=-100,y=0,marker=\"_\",color=\"k\",label=\"MC 20\\% distance error\") # just for the legend label\n",
     "    \n",
     "    if True: # ticks, lims, logscale\n",
     "        \n",
