--- a/notebooks/other_notebooks/errors.ipynb
+++ b/notebooks/other_notebooks/errors.ipynb
@@ -750,6 +750,8 @@
     "        \n",
     "        if verbose:\n",
     "            print(size,end=\"; \")\n",
+    "    if verbose:\n",
+    "        print(\"\\n\")\n",
     "    \n",
     "    return errors_low if len(errors_low)>1 else errors_low[0],\\\n",
     "           errors_high if len(errors_high)>1 else errors_high[0],\\\n",
@@ -1019,8 +1021,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ylog_bool = True\n",
-    "# ylog_bool = False\n",
+    "# ylog_bool = True\n",
+    "ylog_bool = False\n",
     "\n",
     "xlog_bool = True\n",
     "# xlog_bool = False"
@@ -1039,8 +1041,12 @@
     "# fit_func = ReciprocalFunc(p0=[1,10,10])\n",
     "fit_func = InverseSquareFunc(p0=[1])\n",
     "\n",
-    "x_eq = 0.4 if not xlog_bool else 0.6\n",
-    "y_eq = 0.5 if not (xlog_bool and ylog_bool) else 0.3"
+    "if xlog_bool and ylog_bool:\n",
+    "    x_eq,y_eq = 0.75, 0.15\n",
+    "elif xlog_bool:\n",
+    "    x_eq,y_eq = 0.65,0.4\n",
+    "else:\n",
+    "    x_eq,y_eq = 0.4, 0.4"
    ]
   },
   {
@@ -1068,14 +1074,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# save_bool = True\n",
-    "save_bool = False"
+    "MC_error_bool = xlog_bool and ylog_bool"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "61",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_bool = True\n",
+    "# save_bool = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1115,15 +1131,18 @@
     "                     label=dic[\"label\"],color=dic[\"color\"],alpha=0.7)\n",
     "\n",
     "        for dic,ax in zip(all_dicts,[cax,rax]):\n",
-    "            ax.scatter(len(dic[\"df\"]),dic[func+\"_bootstrap_error\"][0],marker=\"*\",color=dic[\"color\"])\n",
+    "            ax.scatter(len(dic[\"df\"]),dic[func+\"_bootstrap_error\"],marker=\"*\",color=dic[\"color\"])\n",
     "            \n",
-    "            ax.scatter(len(dic[\"df\"]),dic[func+\"_MC_d_0.2_error_low\"],marker=\"_\",color=dic[\"color\"])\n",
-    "            ax.scatter(len(dic[\"df\"]),dic[func+\"_MC_d_0.2_error_high\"],marker=\"_\",color=dic[\"color\"])\n",
+    "            if MC_error_bool:\n",
+    "                ax.scatter(len(dic[\"df\"]),dic[func+\"_MC_d_0.2_error_low\"],marker=\"v\",color=dic[\"color\"],s=23)\n",
+    "                ax.scatter(len(dic[\"df\"]),dic[func+\"_MC_d_0.2_error_high\"],marker=\"^\",color=dic[\"color\"],s=23)\n",
     "            \n",
     "            ax.set_xticks([len(dic[\"df\"])])\n",
     "                        \n",
     "        lax.scatter(x=-100,y=0,marker=\"*\",color=\"k\",label=\"Bootstrap error\") # just for the legend label\n",
-    "        lax.scatter(x=-100,y=0,marker=\"_\",color=\"k\",label=\"MC 20\\% distance error\") # just for the legend label\n",
+    "        \n",
+    "        if MC_error_bool:\n",
+    "            lax.scatter(x=-100,y=0,marker=\"v\",color=\"k\",label=\"MC 20% distance error\",s=23) # just for the legend label\n",
     "    \n",
     "    if True: # ticks, lims, logscale\n",
     "        \n",
@@ -1168,30 +1187,28 @@
     "            for (pop_idx,color,y) in zip([0,1],[\"blue\",\"red\"],[y_eq-0.04,y_eq+0.04]):\n",
     "                fit_func.fit(x = sampling_sizes[sampling_sizes<=max_sampling_size], y = all_dicts[pop_idx][func+\"_errors\"][sampling_sizes<=max_sampling_size])\n",
     "\n",
-    "                lax.plot(x_plot, fit_func.func(x_plot, *fit_func.fit_params), color=color, linestyle=\"--\")\n",
-    "                show_fit_params_text(ax=lax,Func=fit_func,alpha=1 if row!=nrows-1 else 0.5,color=color,x_eq=x_eq,y_eq=y,units=mapf.get_units(\"tilt_abs\"))\n",
+    "                lax.plot(x_plot, fit_func.func(x_plot, *fit_func.fit_params), color=color, linestyle=\"--\",alpha=0.7)\n",
+    "                show_fit_params_text(ax=lax,Func=fit_func,alpha=0.7,color=color,x_eq=x_eq,y_eq=y,units=mapf.get_units(\"tilt_abs\"))\n",
     "                \n",
     "        lax.plot([-100,-100],[0,1],label=fit_func.label,linestyle=\"--\",color=\"grey\") # just for the legend label\n",
     "                \n",
     "    if True: # labels, legend, text\n",
     "        if row == nrows-1:\n",
-    "#             lax.set_xlabel(\"Random downsampling sample size\")\n",
+    "#             lax.set_xlabel(\"Sample size\"); lax.text(s=r\"Total $N$\",x=1.1,y=-0.25,transform=lax.transAxes,size=\"medium\")\n",
     "            lax.text(s=\"Sample size\",x=0.5,y=-0.25,transform=lax.transAxes,size=\"medium\")\n",
     "\n",
     "        if row == 0:\n",
-    "            fig.legend(loc=(0.65,0.77) if not (xlog_bool and ylog_bool) else (0.16,0.7))\n",
+    "            fig.legend(loc=(0.65,0.77) if not (xlog_bool and ylog_bool) else (0.16,0.7),framealpha=0 if xlog_bool and ylog_bool else 1)\n",
     "        elif row == 1:\n",
-    "            lax.set_ylabel(r\"Mean squared deviation from true value\")\n",
-    "        \n",
-    "#         lax.set_ylabel(\"Error\")\n",
+    "            lax.set_ylabel(r\"Standard error\")\n",
     "        \n",
     "        if xlog_bool and ylog_bool:\n",
-    "            x_func_text = 0.95\n",
+    "            x_func_text = 0.98\n",
     "        elif xlog_bool:\n",
     "            x_func_text = 0.3\n",
     "        else:\n",
     "            x_func_text = 0.2\n",
-    "        fig.text(s=mapf.get_kinematic_titles_dict(\"r\",\"l\")[func.removesuffix(\"_abs\")],x=x_func_text,y=0.8,transform=lax.transAxes,size=15)\n",
+    "        fig.text(s=mapf.get_kinematic_titles_dict(\"r\",\"l\")[func.removesuffix(\"_abs\")],x=x_func_text,y=0.83,transform=lax.transAxes,size=15)\n",
     "        \n",
     "        fig.align_labels()\n",
     "\n",
@@ -1221,8 +1238,11 @@
     "    elif ylog_bool:\n",
     "        filename += \"_ylog\"\n",
     "    \n",
-    "    if fit_bool:\n",
-    "        filename += \"_fit\"\n",
+    "    if MC_error_bool:\n",
+    "        filename += \"_MC\"\n",
+    "    \n",
+    "    if not fit_bool:\n",
+    "        filename += \"_noFit\"\n",
     "        \n",
     "    print(filename)\n",
     "    \n",
@@ -1235,7 +1255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62",
+   "id": "63",
    "metadata": {},
    "outputs": [],
    "source": []
